# Archimedes

./: .gitignore  CmakeLists.txt  README.md
include/Arch/: Arch.h  Engine.h  Object.h
include/Linear/: Vec3.cpp  Vec3.h
include/Math/: Math.h  Vec2.h  Vec3.h
src/: CMakeLists.txt  main.cpp
src/Arch/: CMakeLists.txt  Engine.cpp  Object.cpp
src/Math/: CMakeLists.txt  Vec2.cpp
